--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
   </head>
   <body>
   <h1> Vikrant Suryadevara </h1>
-  <p> divider one </p>
+  <hr>
+  <div class="about"> <h2> About me  </h2> </div> 
+  <ui>
+    I came from fort mill
+    I have a little brother who is now in 6th grade
+    
+  </ui>
+  <div class="skills"> <h2> Skills </h2></div>
+  <div class="project"> <h2> Project </h2></div>
+  <div class="contact"> <h2> Contact </h2></div>
+
   </body>
   </html>
   
