--- a/index.html
+++ b/index.html
@@ -8,15 +8,29 @@
   <h1> Vikrant Suryadevara </h1>
   <hr>
   <div class="about"> <h2> About me  </h2> </div> 
-  <ul>
-    I came from fort mill
-    I have a little brother who is now in 6th grade
+  <ol>
+    <li> came from fort mill </li>
+    <li> I graduated from USC columbia while being in Capstone scholars. </li>
+    <li> I have a bachelors degree in Computer Science along with a minor in artifical intelligence. </li>
+    <li> I graduated with a 3.7 gpa from USC Columbia </li>
     
-  </ul>
+  </ol>
+  <hr>
   <div class="skills"> <h2> Skills </h2></div>
+      <ol>
+        <li> I have expirence in <b><i>Javascript</i></b>, <b><i> java</i></b><b><i>,HTML</i></b> along with <b> CSS</b></li>
+        <li>  I worked for 4 different companies including IBM before applying for this position</li>
+        <li> In total, I have 4 years of expirence coding with HTML and CSS</li>
+      </ol>
+      <hr>
   <div class="project"> <h2> Project </h2></div>
+      <p> I have several projects, randing from notepads, basic games and simple calculators, to websites and functional programs</p>
+      <p> my latest project is building a website about welding </p>
+      <hr>
   <div class="contact"> <h2> Contact </h2></div>
-
+       <p> my contact information is VIKRANT@email.sc.edu</p>
+       <p> my phone number is xxx-xxx-xxx</p>
+       <p> my emergancy contact is xxx-xxx-xxx</p>
   </body>
   </html>
   
