--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         </ul>
         <hr>
     <div class="project"> <h2 class="HeaderTwoColor"> Project </h2></div>
-        <p> I have several projects, randing from notepads, basic games and simple calculators, to websites and functional programs.</p>
-        <p> my latest project is building a website about welding. </p>
+        <p id = "color"> I have several projects, randing from notepads, basic games and simple calculators, to websites and functional programs.</p>
+        <p id = "color"> my latest project is building a website about welding. </p>
         <hr>
     <div class="contact"> <h2 class="HeaderTwoColor"> Contact </h2></div>
-        <p> my contact information is VIKRANT@email.sc.edu.</p>
-        <p> my phone number is xxx-xxx-xxx.</p>
-        <p> my emergancy contact is xxx-xxx-xxx.</p>
+        <p id = "color"> my contact information is VIKRANT@email.sc.edu.</p>
+        <p id = "color"> my phone number is xxx-xxx-xxx.</p>
+        <p id = "color"> my emergancy contact is xxx-xxx-xxx.</p>
         <hr>
     </body>
    </html>
