--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section class="project">
       <a href="files/statement.pdf"><h3>Problem Statement</h3></a>
      <a href="files/statement.pdf"><img src="images/problem.png"></a>
-      <p> Remote workers have problems maintaining a seperation between work and personal time because the current system dosn't give a balence to work and personal time. This can cause burnout and reduced productivity./p>
+      <p id = "Statement"> Remote workers have problems maintaining a seperation between work and personal time because the current system dosn't give a balence to work and personal time. This can cause burnout and reduced productivity./p>
   </section>
 </div>
 </html>
