--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <p id = "color"> my phone number is xxx-xxx-xxx.</p>
         <p id = "color"> my emergancy contact is xxx-xxx-xxx.</p>
     <section class="project">
-      <a href="files/project.pdf"><h3>Helping Remote workers find a life balance</h3></a>
-     <a href="files/project.pdf"><img src="Images/statement.png"></a>
+      <a href="https://docs.google.com/document/d/1ahDDx8NsufrjazvWcon3SnQl7YNBiOgsfb3ZXfLwDgs/edit?usp=sharing"><h3>Helping Remote workers find a life balance</h3></a>
+     <a href="https://docs.google.com/document/d/1ahDDx8NsufrjazvWcon3SnQl7YNBiOgsfb3ZXfLwDgs/edit?usp=sharing"><img src="Images/statement.png"></a>
       <p id = "Statement"> Remote workers have problems maintaining a seperation between work and personal time because the current system dosn't give a balence to work and personal time. This can cause burnout and reduced productivity. </p>
   </section>
 </div>
