--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p id = "color"> my emergancy contact is xxx-xxx-xxx.</p>
     <section class="project">
       <a href="https://docs.google.com/document/d/1ahDDx8NsufrjazvWcon3SnQl7YNBiOgsfb3ZXfLwDgs/edit?usp=sharing"><h3>Helping Remote workers find a life balance</h3></a>
-     <a href="https://docs.google.com/document/d/1ahDDx8NsufrjazvWcon3SnQl7YNBiOgsfb3ZXfLwDgs/edit?usp=sharing"><img src="Images/statement.png"></a>
+     <a href="https://docs.google.com/document/d/1ahDDx8NsufrjazvWcon3SnQl7YNBiOgsfb3ZXfLwDgs/edit?usp=sharing"><img src="VS06279.github.io/Images/statement.png"></a>
       <p id = "Statement"> Remote workers have problems maintaining a seperation between work and personal time because the current system dosn't give a balence to work and personal time. This can cause burnout and reduced productivity. </p>
   </section>
 </div>
