--- a/index.html
+++ b/index.html
@@ -31,17 +31,18 @@
     <div class="project"> <h2 class="HeaderTwoColor"> Project </h2></div>
         <p id = "color"> I have several projects, randing from notepads, basic games and simple calculators, to websites and functional programs.</p>
         <p id = "color"> my latest project is building a website about welding. </p>
+        <section class="project">
+          <a href="VS06279.github.io/files/Project.pdf"><h3> Program to help remote workers find a work-life balance</h3></a>
+         <a href="VS06279.github.io/files/Project.pdf"><img src="VS06279.github.io/Images/statement.png"></a>
+    
+          <p id = "Statement"> Remote workers have problems maintaining a seperation between work and personal time because the current system dosn't give a balence to work and personal time. This can cause burnout and reduced productivity. </p>
+          '</section>
         <hr>
     <div class="contact"> <h2 class="HeaderTwoColor"> Contact </h2></div>
         <p id = "color"> my contact information is VIKRANT@email.sc.edu.</p>
         <p id = "color"> my phone number is xxx-xxx-xxx.</p>
         <p id = "color"> my emergancy contact is xxx-xxx-xxx.</p>
-    <section class="project">
-      <a href="VS06279.github.io/files/Project.pdf"><h3> Program to help remote workers find a work-life balance</h3></a>
-     <a href="VS06279.github.io/files/Project.pdf"><img src="VS06279.github.io/Images/statement.png"></a>
 
-      <p id = "Statement"> Remote workers have problems maintaining a seperation between work and personal time because the current system dosn't give a balence to work and personal time. This can cause burnout and reduced productivity. </p>
-  </section>
 </div>
 </html>
         <hr>
