--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@
         <p id = "color"> I have several projects, randing from notepads, basic games and simple calculators, to websites and functional programs.</p>
         <p id = "color"> my latest project is building a website about welding. </p>
         <section class="project">
-          <a href="Project.pdf"><h3> Program to help remote workers find a work-life balance</h3> 
-          <a href="Project.pdf">
-            
-          </a>
+          <a href="Project.pdf"><h3> Program to help remote workers find a work-life balance</h3> </a>
          <a href="Project.pdf"><img src="statement.png"></a>
     
           <p id = "Statement"> Remote workers have problems maintaining a seperation between work and personal time because the current system dosn't give a balence to work and personal time. This can cause burnout and reduced productivity. </p>
