--- a/index.html
+++ b/index.html
@@ -31,12 +31,21 @@
     <div class="project"> <h2 class="HeaderTwoColor"> Project </h2></div>
         <p id = "color"> I have several projects, randing from notepads, basic games and simple calculators, to websites and functional programs.</p>
         <p id = "color"> my latest project is building a website about welding. </p>
+         <!--Problem Statement Assignment -->
         <section class="project">
-          <a href="Project.pdf"><h3> Program to help remote workers find a work-life balance</h3> </a>
+          <a href="Project.pdf"><h3> Program to help remote workers find a work-life balance</h3></a>
          <a href="Project.pdf"><img src="statement.png"></a>
     
           <p id = "Statement"> Remote workers have problems maintaining a seperation between work and personal time because the current system dosn't give a balence to work and personal time. This can cause burnout and reduced productivity. </p>
           '</section>
+          Affinity Diagram Assignment 
+                <section class="project">
+                <a href="files/Affinity_DOC.pdf"><h3>Affinity Diagram</h3></a>
+                <a href="files/Affinity_DOC.pdf"><img src="images/Affinity_IMG.png"></a>
+                <p>
+                    Text describing the diagram
+               </p> 
+  </section>
         <hr>
     <div class="contact"> <h2 class="HeaderTwoColor"> Contact </h2></div>
         <p id = "color"> my contact information is VIKRANT@email.sc.edu.</p>
