--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
           '</section>
           Affinity Diagram Assignment 
                 <section class="project">
-                <a href="files/Affinity_DOC.pdf"><h3>Affinity Diagram</h3></a>
-                <a href="files/Affinity_DOC.pdf"><img src="images/Affinity_IMG.png"></a>
+                <a href="files/Affinity_DOC.pdf"><h3 class="HeaderThreeColor">Affinity Diagram</h3></a>
+                <a href="files/Affinity_DOC.pdf"><img src="Images/Affinity_IMG.png"></a>
                 <p>
                     Text describing the diagram
                </p> 
