--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           Affinity Diagram Assignment 
                 <section class="project">
                 <a href="files/Affinity_DOC.pdf"><h3 class="HeaderThreeColor">Affinity Diagram</h3></a>
-                <a href="files/Affinity_DOC.pdf"><img src="Images/Affinity_IMG.png"></a>
+                <a href="files/Affinity_DOC.pdf"><img src="Images/Affinity_IMG.png" class="Size"></a>
                 <p>
                     Text describing the diagram
                </p> 
