--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 <section class="project">
                 <a href="files/Affinity_DOC.pdf"><h3 class="HeaderThreeColor">Affinity Diagram</h3></a>
                 <a href="files/Affinity_DOC.pdf"><img src="Images/Affinity_IMG.png" class="Size"></a>
-                <p>
-                    Text describing the diagram
+                <p id = "Statement">
+                  There is 5 coluums: Hurdles, Long-term support, Regulatory issues, Advertisement and marketing, and Feedback from users. Each column contains ideas/challenges related to building and maintaining an application, such as solving cost issues, creating support systems, dealing with legal regulations, promoting the app, and gathering user feedback for improvements.
                </p> 
   </section>
         <hr>
