--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
                   There is 5 coluums: Hurdles, Long-term support, Regulatory issues, Advertisement and marketing, and Feedback from users. Each column contains ideas/challenges related to building and maintaining an application, such as solving cost issues, creating support systems, dealing with legal regulations, promoting the app, and gathering user feedback for improvements.
                </p> 
   </section>
+    <!--Sketches Assignment-->
+  <section class="project">
+    <a href="files/Sketches_DOC.pdf"><h3>Affinity Diagram</h3></a>
+    <a href="files/Sketches_DOC.pdf"><img src="Images/Sketches_IMG.png"></a>
+    <p>
+    these sketches are what the application would look like if it was put for sale. 
+    </p>
+  </section>
         <hr>
     <div class="contact"> <h2 class="HeaderTwoColor"> Contact </h2></div>
         <p id = "color"> my contact information is VIKRANT@email.sc.edu.</p>
