--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <html>
     <head>
       <title> 
-    <title> CSCE 190: Vikrant Suryadevara  </title>
+     CSCE 190: Vikrant Suryadevara  </title>
     <link rel="stylesheet" href="style.css" />
     </head>
     <body>
