--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
           <p id = "Statement"> Remote workers have problems maintaining a seperation between work and personal time because the current system dosn't give a balence to work and personal time. This can cause burnout and reduced productivity. </p>
           '</section>
-          Affinity Diagram Assignment 
+         <!-- Affinity Diagram Assignment -->
                 <section class="project">
                 <a href="files/Affinity_DOC.pdf"><h3 class="HeaderThreeColor">Affinity Diagram</h3></a>
                 <a href="files/Affinity_DOC.pdf"><img src="Images/Affinity_IMG.png" class="Size"></a>
@@ -53,6 +53,12 @@
     <p id = "Statement">
     these sketches are what the application would look like if it was put for sale. More specifically, it is what the UI would look like and how the app would work. For example it shows how a prototype of the app and it's sections would look like if it was put up for sale.
     </p>
+    <!--Paper Prototype Assignment-->
+<section class="project">
+  <a href="https://www.youtube.com/watch?v=77XGGIO8fZg&ab_channel=VikrantSuryadevara"><h3> Prototype</h3></a>
+  <a href="https://www.youtube.com/watch?v=77XGGIO8fZg&ab_channel=VikrantSuryadevara"><img src="images/Proto.png"></a>
+  <p> These protoypes were based off of my sketeches. These prototypes will show how the app work if the app were to become a real product.</p>
+  </section>
   </section>
         <hr>
     <div class="contact"> <h2 class="HeaderTwoColor"> Contact </h2></div>
