--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
 <section class="project">
   <a href="https://www.youtube.com/watch?v=77XGGIO8fZg&ab_channel=VikrantSuryadevara"><h3> Prototype</h3></a>
   <a href="https://www.youtube.com/watch?v=77XGGIO8fZg&ab_channel=VikrantSuryadevara"><img src="images/Proto.png"></a>
-  <p> These protoypes were based off of my sketeches. These prototypes will show how the app work if the app were to become a real product.</p>
-  </section>
+  <p id = "Statement"> 
+    These protoypes were based off of my sketeches. These prototypes will show how the app work if the app were to become a real product.\
+  </p>
   </section>
         <hr>
     <div class="contact"> <h2 class="HeaderTwoColor"> Contact </h2></div>
