--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!--Paper Prototype Assignment-->
 <section class="project">
   <a href="https://www.youtube.com/watch?v=77XGGIO8fZg&ab_channel=VikrantSuryadevara"><h3> Prototype</h3></a>
-  <a href="https://www.youtube.com/watch?v=77XGGIO8fZg&ab_channel=VikrantSuryadevara"><img src="images/Proto.png"></a>
+  <a href="https://www.youtube.com/watch?v=77XGGIO8fZg&ab_channel=VikrantSuryadevara"><img src="Images/Proto.png"></a>
   <p id = "Statement"> 
     These protoypes were based off of my sketeches. These prototypes will show how the app work if the app were to become a real product.\
   </p>
