--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     These protoypes were based off of my sketeches. These prototypes will show how the app work if the app were to become a real product.\
   </p>
   </section>
+  </section>
         <hr>
     <div class="contact"> <h2 class="HeaderTwoColor"> Contact </h2></div>
         <p id = "color"> my contact information is VIKRANT@email.sc.edu.</p>
