--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
   <p id = "Statement"> 
     These protoypes were based off of my sketeches. These prototypes will show how the app work if the app were to become a real product.\
   </p>
+  <!-- About Me -->
+<h2> About Me </h2>
+<div class="about">
+<img src="Images/profile_image.jpg">
+<p>
+Helllo! Welcome to my webpage, I'm a student a USC columbia. I am studying computer science. I like video games, coding, and animals along with nautre. My goal is to graduate college with high grades. I want a job as a back-end developer. I am going to accomplish these goals by working hard in colelge. I want to be a employee that is known for their talents.
+</p>
+</div>
  
   </section>
         <hr>
@@ -68,6 +76,8 @@
         <p id = "color"> my contact information is VIKRANT@email.sc.edu.</p>
         <p id = "color"> my phone number is xxx-xxx-xxx.</p>
         <p id = "color"> my emergancy contact is xxx-xxx-xxx.</p>
+        <p id = "color"> my github is vs06729</p>
+        <p id = "color"> My linkden is  Vikrant Suryadevara</p>
 
 </div>
 </html>
