--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <!-- About Me -->
 <h2> About Me </h2>
 <div class="about">
-<img src="Images/profile_image.jpg">
+<img src="Images/profile_image.png">
 <p>
 Helllo! Welcome to my webpage, I'm a student a USC columbia. I am studying computer science. I like video games, coding, and animals along with nautre. My goal is to graduate college with high grades. I want a job as a back-end developer. I am going to accomplish these goals by working hard in colelge. I want to be a employee that is known for their talents.
 </p>
