--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <div class="project"> <h2 class="HeaderTwoColor"> Project </h2></div>
         <p id = "color"> I have several projects, randing from notepads, basic games and simple calculators, to websites and functional programs.</p>
         <p id = "color"> my latest project is building a website about welding. </p>
+
          <!--Problem Statement Assignment -->
         <section class="project">
           <a href="Project.pdf"><h3 class="HeaderThreeColor"> Program to help remote workers find a work-life balance</h3></a>
@@ -38,6 +39,7 @@
     
           <p id = "Statement"> Remote workers have problems maintaining a seperation between work and personal time because the current system dosn't give a balence to work and personal time. This can cause burnout and reduced productivity. </p>
           '</section>
+
          <!-- Affinity Diagram Assignment -->
                 <section class="project">
                 <a href="files/Affinity_DOC.pdf"><h3 class="HeaderThreeColor">Affinity Diagram</h3></a>
@@ -48,7 +50,7 @@
   </section>
     <!--Sketches Assignment-->
   <section class="project">
-    <a href="files/Sketches_DOC.pdf"><h3>Prototype</h3></a>
+    <a href="files/Sketches_DOC.pdf"><h3>Sketches/h3></a>
     <a href="files/Sketches_DOC.pdf"><img src="Images/Sketches_IMG.png"></a>
     <p id = "Statement">
     these sketches are what the application would look like if it was put for sale. More specifically, it is what the UI would look like and how the app would work. For example it shows how a prototype of the app and it's sections would look like if it was put up for sale.
