--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                   There is 5 coluums: Hurdles, Long-term support, Regulatory issues, Advertisement and marketing, and Feedback from users. Each column contains ideas/challenges related to building and maintaining an application, such as solving cost issues, creating support systems, dealing with legal regulations, promoting the app, and gathering user feedback for improvements.
                </p> 
   </section>
+
     <!--Sketches Assignment-->
   <section class="project">
     <a href="files/Sketches_DOC.pdf"><h3>Sketches/h3></a>
@@ -56,6 +57,7 @@
     these sketches are what the application would look like if it was put for sale. More specifically, it is what the UI would look like and how the app would work. For example it shows how a prototype of the app and it's sections would look like if it was put up for sale.
     </p>
   </section>
+
     <!--Paper Prototype Assignment-->
 <section class="project">
   <a href="https://www.youtube.com/watch?v=77XGGIO8fZg&ab_channel=VikrantSuryadevara"><h3> Prototype</h3></a>
@@ -63,6 +65,7 @@
   <p id = "Statement"> 
     These protoypes were based off of my sketeches. These prototypes will show how the app work if the app were to become a real product.
   </p>
+
   <!-- About Me -->
 <h2> About Me </h2>
 <div class="about">
@@ -82,6 +85,12 @@ Helllo! Welcome to my webpage, I'm a student a USC columbia. I am studying compu
         <p id = "color"> My linkden is  Vikrant Suryadevara</p>
 
 </div>
+<section class="project">
+<div class = "skills">
+  <p><b>Category 1:</b>Details for category 1</p>
+  <p><b>Category 2:</b>Details for category 2</p>
+  <p><b>Resume:</b><a href="files/resume.pdf">Download here</a></p>
+  </div>
 </html>
         <hr>
     </body>
