--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <div class="about"> <h2 class="HeaderTwoColor"> About me  </h2> </div> 
     <ul id="ul">
        <!-- About Me -->
-<h2> About Me </h2>
 <div class="about">
 <img src="Images/profile_image.png">
 </div>
@@ -100,10 +99,10 @@
             </a>
             <p>This is a program that calculates the total cost of a software pacakge dpeending on how much you ordered</p>
 
-            <a href="https://github.com/VS06279/Book-bonus">
-              <img src="Images/Book.png">
+            <a href="https://github.com/VS06279/Story">
+              <img src="Images/Dragon.png">
               </a>
-              <p>This is a program that calculates the total cost of a software pacakge dpeending on how much you ordered</p>
+              <p>This is a choose your own adventure program</p>
               
               <a href="https://github.com/VS06279/Triangle">
                 <img src="Images/Triangle.png">
