--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </a>
 
           <a href="https://github.com/VS06279/Ball-velocity-and-distance-calculator">
-          <img src="Images/Algorithmic Design.png.">
+          <img src="Images/Algorithmic-Design.png.">
           </a>
           <p>This is a program that calculates the final velocity and distance of a ball based off of intial velocity and time</p>
 
@@ -100,7 +100,7 @@
             <p>This is a program that calculates the total cost of a software pacakge dpeending on how much you ordered</p>
 
             <a href="https://github.com/VS06279/Story">
-              <img src="Images/Dragon.png">
+              <img src="Images/dragon.png">
               </a>
               <p>This is a choose your own adventure program</p>
               
