--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </a>
 
           <a href="https://github.com/VS06279/Ball-velocity-and-distance-calculator">
-          <img src="Images/Algorithmic-Design.png.">
+          <img src="Images/Algorithmic-Design.png">
           </a>
           <p>This is a program that calculates the final velocity and distance of a ball based off of intial velocity and time</p>
 
