--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <li> I graduated from USC columbia while being in Capstone scholars. </li>
       <li> I have a bachelors degree in Computer Science along with a minor in artifical intelligence. </li>
       <li> I graduated with a 3.7 gpa from USC Columbia. </li>
+      <li> <b>Resume:</b><a href="files/resume.pdf">Download here</li>
       
     </ul>
     <p><b>Resume:</b><a href="files/resume.pdf">Download here</a></p>
