--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
     <h1> Vikrant Suryadevara </h1>
     <hr>
-    <div class="about"> <h2 class="HeaderTwoColor"> About me  </h2> </div> 
+    <div class="about"> <h2 class="HeaderTwoColor"><h2 class="HeaderTwoColor"> About me  </h2> </div> 
     <ul id="ul">
        <!-- About Me -->
 <div class="about">
@@ -57,7 +57,7 @@
 
     <!--Sketches Assignment-->
   <section class="project">
-    <a href="files/Sketches_DOC.pdf"><h3>Sketches/h3></a>
+    <a href="files/Sketches_DOC.pdf"><h3>Sketches></a>
     <a href="files/Sketches_DOC.pdf"><img src="Images/Sketches_IMG.png"></a>
     <p id = "Statement">
     these sketches are what the application would look like if it was put for sale. More specifically, it is what the UI would look like and how the app would work. For example it shows how a prototype of the app and it's sections would look like if it was put up for sale.
