--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ These protoypes were based off of my sketeches. These prototypes will show how t
 
 <!-- Github Respositories assignment-->
 <section class="project">
-<a href="https://github.com/VS06279/">
+<a href="https://github.com/VS06279/code">
 <h3>Algorithmic Design Final Project</h3>
 </a>
 
