--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ There is 5 coluums: Hurdles, Long-term support, Regulatory issues, Advertisement
 
 <!--Sketches Assignment-->
 <section class="project">
-<a href="files/Sketches_DOC.pdf"><h3>Sketches></a>
+<a href="files/Sketches_DOC.pdf"> Sketches </a>
 <a href="files/Sketches_DOC.pdf"><img src="Images/Sketches_IMG.png"></a>
 <p id = "Statement">
 these sketches are what the application would look like if it was put for sale. More specifically, it is what the UI would look like and how the app would work. For example it shows how a prototype of the app and it's sections would look like if it was put up for sale.
