--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ These protoypes were based off of my sketeches. These prototypes will show how t
 
 <!-- Github Respositories assignment-->
 <section class="project">
-<a href="https://github.com/VS06279/code">
+<a href="https://github.com/VS06279/">
 <h3>Algorithmic Design Final Project</h3>
 </a>
 
@@ -117,7 +117,10 @@ These protoypes were based off of my sketeches. These prototypes will show how t
 </a>
 <p>This is a program that let's you play rock paper scissors against a computer</p>
 
-
+<a href="https://github.com/VS06279/code">
+  <img src="Images/Pencil.png">
+</a>
+<p> This is a program that displaces a drawing of a piece of toast</p>
 </section>
 
 <hr>
