--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ These protoypes were based off of my sketeches. These prototypes will show how t
 <a href="https://github.com/VS06279/Book-bonus">
 <img src="Images/Book.png">
 </a>
-<p>This is a program that calculates the total cost of a software pacakge dpeending on how much you ordered</p>
+<p>This is a Program that shows you how many points you redeemed based on how many books you bough</p>
 
 <a href="https://github.com/VS06279/Story">
 <img src="Images/dragon.png">
@@ -121,6 +121,7 @@ These protoypes were based off of my sketeches. These prototypes will show how t
   <img src="Images/Pencil.png">
 </a>
 <p> This is a program that displaces a drawing of a piece of toast</p>
+
 </section>
 
 <hr>
