--- a/index.html
+++ b/index.html
@@ -1,130 +1,123 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title> 
-CSCE 190: Vikrant Suryadevara  </title>
-<link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vikrant Suryadevara's Personal Website</title>
+
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<h1> Vikrant Suryadevara </h1>
+<h1>Vikrant Suryadevara</h1>
+<h1> Welcome to my Personal webpage</h1>
+<h2> Please ignore the stuff below, I am currently reworking this website to be a personal portfolio</h2>
 <hr>
-<div class="about"> <h2 class="HeaderTwoColor"><h2 class="HeaderTwoColor"> About me  </h2> </div> 
-<ul id="ul">
-<!-- About Me -->
 <div class="about">
-<img src="Images/profile_image.png">
+    <h2 class="HeaderTwoColor">About Me</h2>
+    <img src="Images/profile_image.png" alt="Profile Image">
+    <ul>
+        <li>I came from Fort Mill.</li>
+        <li>I graduated from USC Columbia while being in Capstone Scholars.</li>
+        <li>I have a bachelor's degree in Computer Science along with a minor in Artificial Intelligence.</li>
+        <li>I graduated with a 3.7 GPA from USC Columbia.</li>
+    </ul>
 </div>
-<li> I came from fort mill. </li>
-<li> I graduated from USC columbia while being in Capstone scholars. </li>
-<li> I have a bachelors degree in Computer Science along with a minor in artifical intelligence. </li>
-<li> I graduated with a 3.7 gpa from USC Columbia. </li>
-</ul>
-
 <hr>
-<div class="skills"> <h2 class="HeaderTwoColor"> Skills </h2></div>
-
-
-<ul id="ul">
-<li> I have expirence in <b><i>Javascript</i></b>, <b><i> java</i></b><b><i>, HTML</i></b> along with <b> CSS</b>.</li>
-<li>  I worked for 4 different companies including IBM before applying for this position.</li>
-<li> In total, I have 4 years of expirence coding with HTML and CSS.</li>
-<li> <b>Resume:</b><a href="files/resume.pdf"> Download here</li>
-</ul>
+<div class="skills">
+    <h2 class="HeaderTwoColor">Skills</h2>
+    <ul>
+        <li>I have experience in <b><i>JavaScript</i></b>, <b><i>Java</i></b>, <b><i>HTML</i></b>, along with <b>CSS</b>.</li>
+        <li>I worked for 4 different companies, including IBM, before applying for this position.</li>
+        <li>In total, I have 4 years of experience coding with HTML and CSS.</li>
+        <li><b>Resume:</b><a href="files/resume.pdf"> Download here</a></li>
+    </ul>
+</div>
 <hr>
-<div class="project"> <h2 class="HeaderTwoColor"> Project </h2></div>
-<p id = "color"> I have several projects, randing from notepads, basic games and simple calculators, to websites and functional programs.</p>
-<p id = "color"> my latest project is building a website about welding. </p>
+<div class="project">
+    <h2 class="HeaderTwoColor">Project</h2>
+    <p>I have several projects, ranging from notepads, basic games, and simple calculators, to websites and functional programs.</p>
+    <p>My latest project is building a website about welding.</p>
 
-<!--Problem Statement Assignment -->
-<section class="project">
-<a href="Project.pdf"><h3 class="HeaderThreeColor"> Program to help remote workers find a work-life balance</h3></a>
-<a href="Project.pdf"><img src="statement.png"></a>
+    <!-- Problem Statement Assignment -->
+    <section class="project">
+        <a href="Project.pdf"><h3 class="HeaderThreeColor">Program to help remote workers find a work-life balance</h3></a>
+        <a href="Project.pdf"><img src="statement.png" alt="Project Statement"></a>
+        <p>Remote workers have problems maintaining a separation between work and personal time because the current system doesn't give a balance to work and personal time. This can cause burnout and reduced productivity.</p>
+    </section>
 
-<p id = "Statement"> Remote workers have problems maintaining a seperation between work and personal time because the current system dosn't give a balence to work and personal time. This can cause burnout and reduced productivity. </p>
-'</section>
+    <!-- Affinity Diagram Assignment -->
+    <section class="project">
+        <a href="files/Affinity_DOC.pdf"><h3 class="HeaderThreeColor">Affinity Diagram</h3></a>
+        <a href="files/Affinity_DOC.pdf"><img src="Images/Affinity_IMG.png" class="Size" alt="Affinity Diagram"></a>
+        <p>There are 5 columns: Hurdles, Long-term support, Regulatory issues, Advertisement and marketing, and Feedback from users. Each column contains ideas/challenges related to building and maintaining an application, such as solving cost issues, creating support systems, dealing with legal regulations, promoting the app, and gathering user feedback for improvements.</p>
+    </section>
 
-<!-- Affinity Diagram Assignment -->
-<section class="project">
-<a href="files/Affinity_DOC.pdf"><h3 class="HeaderThreeColor">Affinity Diagram</h3></a>
-<a href="files/Affinity_DOC.pdf"><img src="Images/Affinity_IMG.png" class="Size"></a>
-<p id = "Statement">
-There is 5 coluums: Hurdles, Long-term support, Regulatory issues, Advertisement and marketing, and Feedback from users. Each column contains ideas/challenges related to building and maintaining an application, such as solving cost issues, creating support systems, dealing with legal regulations, promoting the app, and gathering user feedback for improvements.
-</p> 
-</section>
+    <!-- Sketches Assignment -->
+    <section class="project">
+        <a href="files/Sketches_DOC.pdf">Sketches</a>
+        <a href="files/Sketches_DOC.pdf"><img src="Images/Sketches_IMG.png" alt="Sketches"></a>
+        <p>These sketches represent what the application would look like if it were put for sale. More specifically, it shows the UI and how the app would work, including a prototype of the app and its sections.</p>
+    </section>
 
-<!--Sketches Assignment-->
-<section class="project">
-<a href="files/Sketches_DOC.pdf"> Sketches </a>
-<a href="files/Sketches_DOC.pdf"><img src="Images/Sketches_IMG.png"></a>
-<p id = "Statement">
-these sketches are what the application would look like if it was put for sale. More specifically, it is what the UI would look like and how the app would work. For example it shows how a prototype of the app and it's sections would look like if it was put up for sale.
-</p>
-</section>
+    <!-- Paper Prototype Assignment -->
+    <section class="project">
+        <a href="https://www.youtube.com/watch?v=77XGGIO8fZg&ab_channel=VikrantSuryadevara"><h3>Prototype</h3></a>
+        <a href="https://www.youtube.com/watch?v=77XGGIO8fZg&ab_channel=VikrantSuryadevara"><img src="Images/Proto.png" alt="Prototype"></a>
+        <p>These prototypes were based on my sketches. They show how the app would work if it were to become a real product.</p>
+    </section>
 
-<!--Paper Prototype Assignment-->
-<section class="project">
-<a href="https://www.youtube.com/watch?v=77XGGIO8fZg&ab_channel=VikrantSuryadevara"><h3> Prototype</h3></a>
-<a href="https://www.youtube.com/watch?v=77XGGIO8fZg&ab_channel=VikrantSuryadevara"><img src="Images/Proto.png"></a>
-<p id = "Statement"> 
-These protoypes were based off of my sketeches. These prototypes will show how the app work if the app were to become a real product.
-</p>
-
-
-
-</section>
+</div>
 <hr>
-<div class="contact"> <h2 class="HeaderTwoColor"> Contact </h2></div>
-<p id = "color"> my contact information is VIKRANT@email.sc.edu.</p>
-<p id = "color"> my phone number is xxx-xxx-xxx.</p>
-<p id = "color"> my emergancy contact is xxx-xxx-xxx.</p>
-<p id = "color"> my github is vs06729</p>
-<p id = "color"> My linkden is  Vikrant Suryadevara</p>
+<div class="contact">
+    <h2 class="HeaderTwoColor">Contact</h2>
+    <p>My contact information is: <strong>VIKRANT@email.sc.edu</strong></p>
+    <p>My phone number is: <strong>xxx-xxx-xxx</strong></p>
+    <p>My emergency contact is: <strong>xxx-xxx-xxx</strong></p>
+    <p>My GitHub is: <a href="https://github.com/VS06279">vs06729</a></p>
+    <p>My LinkedIn is: <a href="https://www.linkedin.com/in/vikrant-suryadevara/">Vikrant Suryadevara</a></p>
+</div>
 
-<!-- Github Respositories assignment-->
+<!-- GitHub Repositories Assignment -->
 <section class="project">
-<a href="https://github.com/VS06279/">
-<h3>Algorithmic Design Final Project</h3>
-</a>
+    <a href="https://github.com/VS06279/">
+        <h3>Algorithmic Design Final Project</h3>
+    </a>
 
-<a href="https://github.com/VS06279/Ball-velocity-and-distance-calculator">
-<img src="Images/Algorithmic-Design.png">
-</a>
-<p>This is a program that calculates the final velocity and distance of a ball based off of intial velocity and time</p>
+    <a href="https://github.com/VS06279/Ball-velocity-and-distance-calculator">
+        <img src="Images/Algorithmic-Design.png" alt="Ball Velocity and Distance Calculator">
+    </a>
+    <p>This is a program that calculates the final velocity and distance of a ball based on initial velocity and time.</p>
 
-<a href="https://github.com/VS06279/Book-bonus">
-<img src="Images/Book.png">
-</a>
-<p>This is a Program that shows you how many points you redeemed based on how many books you bough</p>
+    <a href="https://github.com/VS06279/Book-bonus">
+        <img src="Images/Book.png" alt="Book Bonus Program">
+    </a>
+    <p>This is a program that shows you how many points you redeemed based on how many books you bought.</p>
 
-<a href="https://github.com/VS06279/Story">
-<img src="Images/dragon.png">
-</a>
-<p>This is a choose your own adventure program</p>
+    <a href="https://github.com/VS06279/Story">
+        <img src="Images/dragon.png" alt="Choose Your Own Adventure Program">
+    </a>
+    <p>This is a choose-your-own-adventure program.</p>
 
-<a href="https://github.com/VS06279/Triangle">
-<img src="Images/Triangle.png">
-</a>
-<p>This is a program that makes a triangle based on the height</p>
+    <a href="https://github.com/VS06279/Triangle">
+        <img src="Images/Triangle.png" alt="Triangle Program">
+    </a>
+    <p>This is a program that creates a triangle based on the height.</p>
 
-<a href="https://github.com/VS06279/Matrix-Calculator">
-<img src="Images/Calculator.png">
-</a>
-<p>This is a program that does matrix addition</p>
+    <a href="https://github.com/VS06279/Matrix-Calculator">
+        <img src="Images/Calculator.png" alt="Matrix Calculator">
+    </a>
+    <p>This is a program that performs matrix addition.</p>
 
-<a href="https://github.com/VS06279/Rock-Paper-Scissors">
-<img src="Images/Rock.png">
-</a>
-<p>This is a program that let's you play rock paper scissors against a computer</p>
+    <a href="https://github.com/VS06279/Rock-Paper-Scissors">
+        <img src="Images/Rock.png" alt="Rock Paper Scissors Game">
+    </a>
+    <p>This is a program that lets you play rock paper scissors against a computer.</p>
 
-<a href="https://github.com/VS06279/code">
-  <img src="Images/Pencil.png">
-</a>
-<p> This is a program that displaces a drawing of a piece of toast</p>
-
+    <a href="https://github.com/VS06279/code">
+        <img src="Images/Pencil.png" alt="Drawing Program">
+    </a>
+    <p>This is a program that displays a drawing of a piece of toast.</p>
 </section>
-
 <hr>
 </body>
 </html>
-
