--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
 <div id ="SideNav" class "sidenav"
 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
-<li> <a href = "#"> About me </a> </li>
-<li> <a href = "#"> Skills </a></li>
-<li> <a href = "#"> Projects </a></li>
-<li> <a href = "#">  Contact</a></li>
+
 <!-- main content -->
 </div>
 <h1>Vikrant Suryadevara</h1>
 <h1> Welcome to my Personal webpage</h1>
 <h2> Please ignore the stuff below, I am currently reworking this website to be a personal portfolio</h2>
 <hr>
+<p> please click on these links to go to different parts of my webpage</p>
+<li> <a href = "About_Me.html"> About me </a> </li>
+<li> <a href = "Skills.html"> Skills </a></li>
+<li> <a href = "Projects.html"> Projects </a></li>
+<li> <a href = "Contacts.html">  Contact</a></li>
+<p> There will be more stuff to put here soon, for now I will focus on the other webapges for this website</p>
 <div class="about">
     <h2 class="HeaderTwoColor">About Me</h2>
     <img src="Images/profile_image.png" alt="Profile Image">
@@ -48,7 +51,7 @@
 
 
 
-        
+
 <!--    </ul>-->
 <!--</div>-->
 <!--<hr>-->
@@ -106,7 +109,7 @@
 <!--    <p>My LinkedIn is: <a href="https://www.linkedin.com/in/vikrant-suryadevara/">Vikrant Suryadevara</a></p>-->
 <!--</div>-->
 
-<!--&lt;!&ndash; GitHub Repositories Assignment &ndash;&gt;-->
+<!-- GitHub Repositories Assignment -->
 <!--<section class="project">-->
 <!--    <a href="https://github.com/VS06279/">-->
 <!--        <h3>Algorithmic Design Final Project</h3>-->
