--- a/Contacts.html
+++ b/Contacts.html
@@ -7,10 +7,10 @@
 <body>
 
 <h2 class="HeaderTwoColor">Contact</h2>-->
-    <p>My contact information is: <strong>VIKRANT@email.sc.edu</strong></p>
-    <p>My phone number is: <strong>xxx-xxx-xxx</strong></p>
-    <p>My emergency contact is: <strong>xxx-xxx-xxx</strong></p>
-    <p>My GitHub is: <a href="https://github.com/VS06279">vs06729</a></p>
-    <p>My LinkedIn is: <a href="https://www.linkedin.com/in/vikrant-suryadevara/">Vikrant Suryadevara</a></p>
+    <p id = "Litext" >My contact information is: <strong>VIKRANT@email.sc.edu</strong></p>
+    <p id = "Litext">My phone number is: <strong>xxx-xxx-xxx</strong></p>
+    <p id = "Litext">My emergency contact is: <strong>xxx-xxx-xxx</strong></p>
+    <p id = "Litext">My GitHub is: <a href="https://github.com/VS06279">vs06729</a></p>
+    < id = "Litext">My LinkedIn is: <a href="https://www.linkedin.com/in/vikrant-suryadevara/">Vikrant Suryadevara</a></p>
 </body>
 </html>
