--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <li> <a href = "Skills.html"> Skills </a></li>
 <li> <a href = "Projects.html"> Projects </a></li>
 <li> <a href = "Contacts.html">  Contact</a></li>
-<p> There will be more stuff to put here soon, for now I will focus on the other webapges for this website</p>
+<p id = "Litext"> There will be more stuff to put here soon, for now I will focus on the other webapges for this website</p>
 <div class="about">
     <h2 class="HeaderTwoColor">About Me</h2>
     <img src="Images/profile_image.png" alt="Profile Image">
