--- a/Projects.html
+++ b/Projects.html
@@ -14,28 +14,28 @@
     <section class="project">
         <a href="Project.pdf"><h3 class="HeaderThreeColor">Program to help remote workers find a work-life balance</h3></a>
         <a href="Project.pdf"><img src="statement.png" alt="Project Statement"></a>
-        <p>Remote workers have problems maintaining a separation between work and personal time because the current system doesn't give a balance to work and personal time. This can cause burnout and reduced productivity.</p>
+        <p id = "Litext">Remote workers have problems maintaining a separation between work and personal time because the current system doesn't give a balance to work and personal time. This can cause burnout and reduced productivity.</p>
     </section>
 
     <!-- Affinity Diagram Assignment -->
     <section class="project">
         <a href="files/Affinity_DOC.pdf"><h3 class="HeaderThreeColor">Affinity Diagram</h3></a>
         <a href="files/Affinity_DOC.pdf"><img src="Images/Affinity_IMG.png" class="Size" alt="Affinity Diagram"></a>
-        <p>There are 5 columns: Hurdles, Long-term support, Regulatory issues, Advertisement and marketing, and Feedback from users. Each column contains ideas/challenges related to building and maintaining an application, such as solving cost issues, creating support systems, dealing with legal regulations, promoting the app, and gathering user feedback for improvements.</p>
+        <p id = "Litext">There are 5 columns: Hurdles, Long-term support, Regulatory issues, Advertisement and marketing, and Feedback from users. Each column contains ideas/challenges related to building and maintaining an application, such as solving cost issues, creating support systems, dealing with legal regulations, promoting the app, and gathering user feedback for improvements.</p>
     </section>
 
     <!-- Sketches Assignment -->
     <section class="project">
         <a href="files/Sketches_DOC.pdf">Sketches</a>
         <a href="files/Sketches_DOC.pdf"><img src="Images/Sketches_IMG.png" alt="Sketches"></a>
-        <p>These sketches represent what the application would look like if it were put for sale. More specifically, it shows the UI and how the app would work, including a prototype of the app and its sections.</p>
+        <p id = "Litext" >These sketches represent what the application would look like if it were put for sale. More specifically, it shows the UI and how the app would work, including a prototype of the app and its sections.</p>
     </section>
 
     <!-- Paper Prototype Assignment -->
     <section class="project">
         <a href="https://www.youtube.com/watch?v=77XGGIO8fZg&ab_channel=VikrantSuryadevara"><h3>Prototype</h3></a>
         <a href="https://www.youtube.com/watch?v=77XGGIO8fZg&ab_channel=VikrantSuryadevara"><img src="Images/Proto.png" alt="Prototype"></a>
-        <p>These prototypes were based on my sketches. They show how the app would work if it were to become a real product.</p>
+        <p id = "Litext">These prototypes were based on my sketches. They show how the app would work if it were to become a real product.</p>
     </section>
 
 </body>
