--- a/Contacts.html
+++ b/Contacts.html
@@ -11,6 +11,6 @@
     <p id = "Litext">My phone number is: <strong>xxx-xxx-xxx</strong></p>
     <p id = "Litext">My emergency contact is: <strong>xxx-xxx-xxx</strong></p>
     <p id = "Litext">My GitHub is: <a href="https://github.com/VS06279">vs06729</a></p>
-    < id = "Litext">My LinkedIn is: <a href="https://www.linkedin.com/in/vikrant-suryadevara/">Vikrant Suryadevara</a></p>
+    <p id = "Litext">My LinkedIn is: <a href="https://www.linkedin.com/in/vikrant-suryadevara/">Vikrant Suryadevara</a></p>
 </body>
 </html>
