--- a/index.html
+++ b/index.html
@@ -20,20 +20,12 @@
 <h2> Please ignore the stuff below, I am currently reworking this website to be a personal portfolio</h2>
 <hr>
 <p> please click on these links to go to different parts of my webpage</p>
-<li> <a href = "About_Me.html"> About me </a> </li>
-<li> <a href = "Skills.html"> Skills </a></li>
-<li> <a href = "Projects.html"> Projects </a></li>
-<li> <a href = "Contacts.html">  Contact</a></li>
+<li id = "#BiggerText"> <a href = "About_Me.html"> About me </a> </li>
+<li  id = "#BiggerText"> <a href = "Skills.html"> Skills </a></li>
+<li  id = "#BiggerText"> <a href = "Projects.html"> Projects </a></li>
+<li  id = "#BiggerText"> <a href = "Contacts.html">  Contact</a></li>
 <p id = "Litext"> There will be more stuff to put here soon, for now I will focus on the other webapges for this website</p>
-<div class="about">
-    <h2 class="HeaderTwoColor">About Me</h2>
-    <img src="Images/profile_image.png" alt="Profile Image">
-    <ul>
-        <li>I came from Fort Mill.</li>
-        <li>I graduated from USC Columbia while being in Capstone Scholars.</li>
-        <li>I have a bachelor's degree in Computer Science along with a minor in Artificial Intelligence.</li>
-        <li>I graduated with a 3.7 GPA from USC Columbia.</li>
-        <script src="script.js"> </script>
+
 
 
 
