--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 <h1> Welcome to my Personal webpage</h1>
 <h2> Please ignore the stuff below, I am currently reworking this website to be a personal portfolio</h2>
 <hr>
-<p> please click on these links to go to different parts of my webpage</p>
-<li id = "#BiggerText"> <a href = "About_Me.html"> About me </a> </li>
-<li  id = "#BiggerText"> <a href = "Skills.html"> Skills </a></li>
-<li  id = "#BiggerText"> <a href = "Projects.html"> Projects </a></li>
-<li  id = "#BiggerText"> <a href = "Contacts.html">  Contact</a></li>
+<p id = "Litext"> please click on these links to go to different parts of my webpage</p>
+<li id = "BiggerText"> <a href = "About_Me.html"> About me </a> </li>
+<li  id = "BiggerText"> <a href = "Skills.html"> Skills </a></li>
+<li  id = "BiggerText"> <a href = "Projects.html"> Projects </a></li>
+<li  id = "BiggerText"> <a href = "Contacts.html">  Contact</a></li>
 <p id = "Litext"> There will be more stuff to put here soon, for now I will focus on the other webapges for this website</p>
 
 
