--- a/index.html
+++ b/index.html
@@ -1,153 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vikrant Suryadevara's Personal Website</title>
     <link rel="stylesheet" href="style.css" >
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!--- fonts --->
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- BootstrapCDM --->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.6.0/css/fontawesome.min.css">
 </head>
 <body>
+
 <!--Side bar -->
 <section class = "header">
     <nav>
-        <a href = "index.html"><img src="" alt =""> </a>
-        <div class = "nav-links" id="navLinks">
-            <i class="fa fa-times" aria-hidden="true" onclick="hideMenu()"></i>
-            <ul>
-                <li> <a href =""> About Me </a></li>
-                <li> <a href =""> Skills </a></li>
-                <li> <a href =""> Projects </a></li>
-                <li> <a href =""> Contacts </a></li>
-                <li> <a href =""> More </a></li>
-            </ul>
-        </div>
-        <i class="fa fa-times" aria-hidden="true" onclick="showMenu()"></i>
+        <a href = "index.html"><img src="Images/ComputerScience.png"> </a>
+            <div class = "nav-links" id="navLinks">
+                <i class= "fa-solid fa-circle-xmark" onclick="hideMenu()"> </i>
+
+                <ul>
+                    <li> <a href =""> About Me </a></li>
+                    <li> <a href =""> Skills </a></li>
+                    <li> <a href =""> Projects </a></li>
+                    <li> <a href =""> Contacts </a></li>
+                    <li> <a href =""> More </a></li>
+                </ul>
+            </div>
+        <i class="fa-solid fa-bars" onclick="showMenu()"></i>
     </nav>
 
     <div class ="text-box">
-      <h1> Hello guys welcome to my webpage </h1>
-        <p> Please forgive me if this webpage has errors or it looks very ameatur-ish. This is my first time doing something like this ^_^.</p>
-        <a href=""> Learn more about me here!</a>
+        <h1> Hello guys welcome to my webpage </h1>
+        <p> Please forgive me if this webpage has errors or it looks very ameatur-ish. <br> This is my first time doing something like this ^_^.</p>
+        <a href="" class="hero-btn"> Learn more about me here!</a>
     </div>
 
-</section>
-
-<!-----About Me------>
-
-<section class ="couse">
-    <h1>About me</h1>
-    <p> I came from Fort Mill. </p>
-        <p>I graduated from USC Columbia while being in Capstone Scholars.</p>
-        <p>I have a bachelor's degree in Computer Science along with a minor in Artificial Intelligence.</p>
-        <p>I graduated with a 3.7 GPA from USC Columbia.</p>
-
-    <div class = "row">
-        <div class = "course-col">
-            <h3> placeholder text 1></h3>
-            <p> Put something here soon</p>
-        </div>
-        <div class = "course-col">
-            <h3> placeholder text 2></h3>
-            <p> Put something here soon</p>
-        </div>
-        <div class = "course-col">
-            <h3> placeholder text 3></h3>
-            <p> Put something here soon</p>
-        </div>
-    </div>
-</section>
-
-<!----- Contacts ----->
-<section class="campus">
-    <h1> Contacts</h1>
-    <p>My contact information is: <strong>VIKRANT@email.sc.edu</strong></p>
-    <p>My phone number is: <strong>xxx-xxx-xxx</strong></p>
-    <p>My emergency contact is: <strong>xxx-xxx-xxx</strong></p>
-    <p>My GitHub is: <a href="https://github.com/VS06279">vs06729</a></p>
-    <p>My LinkedIn is: <a href="https://www.linkedin.com/in/vikrant-suryadevara/">Vikrant Suryadevara</a></p>
-
-    <div class="row">
-        <div class="campus-col">
-            <img src="images/london.png">
-            <div class = "layer">
-                <h3> Placeholder text 1</h3>
-            </div>
-        </div>
-        <div class="campus-col">
-            <img src="images/london.png">
-            <div class = "layer">
-                <h3> Placeholder text 2</h3>
-            </div>
-        </div>
-        <div class="campus-col">
-            <img src="images/london.png">
-            <div class = "layer">
-                <h3> Placeholder text 3</h3>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!----- Projects ------>
-
-<section class ="facilities">
-    <h1> Projects</h1>
-    <p> this is placeholder text</p>
-
-    <div class="row">
-        <div class ="facilities-col">
-            <img src="images/library.png">
-            <h3> Placeholder text 1</h3>
-            <p> Test 1</p>
-        </div>
-        <div class ="facilities-col">
-            <img src="images/library.png">
-            <h3> Placeholder text 2</h3>
-            <p> Test 2</p>
-        </div>
-        <div class ="facilities-col">
-            <img src="images/library.png">
-            <h3> Placeholder text 3</h3>
-            <p> Test 3</p>
-        </div>
-    </div>
-</section>
-
-<!-------- Skills -------->
-
-<section class="testimonals">
-    <h1> Place holder text</h1>
-    <p> placeholder text</p>
-
-    <div class = "row">
-        <div class="testimonial-col">
-            <p> insert a image here</p>
-            <div>
-                <p> more placeholder text</p>
-                <h3> even more placeholder text</h3>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-o"></i>
-            </div>
-        </div>
-        <div class="testimonial-col">
-            <p> insert a image2 here</p>
-            <div>
-                <p> more placeholder2 text</p>
-                <h3> even more placeholder2 text</h3>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-half-o"></i>
-            </div>
-        </div>
-    </div>
 </section>
 
 <!----- Extra ------>
@@ -161,8 +51,8 @@
 <!----- Footer ------>
 
 <section class="footer">
-<h4> the last placeholder text</h4>
-<p> finally its over <br> test</p>
+    <h4> the last placeholder text</h4>
+    <p> finally its over <br> test</p>
     <div class="icons">
         <i class="fa fa-facebook"> </i>
         <i class="fa fa-twitter"> </i>
@@ -171,10 +61,6 @@
     </div>
 
 </section>
-
-
-
-
 
 <!----JavaScript for toggle Menu ---->
 <script>
@@ -187,6 +73,7 @@
         navLinks.style.right = "-200px";
     }
 </script>
+
 
 </body>
 </html>
