--- a/index.html
+++ b/index.html
@@ -40,27 +40,27 @@
 
 </section>
 
-<!----- Extra ------>
+<!--&lt;!&ndash;-&#45;&#45; Extra &#45;&#45;&#45;&#45;&ndash;&gt;-->
 
-<section class="cta">
-    <h1>placeholder ass text<br> peepeepoopoo</h1>
-    <a href="" class="hero-btn"> CONTACT ME </a>
-</section>
+<!--<section class="cta">-->
+<!--    <h1>placeholder ass text<br> peepeepoopoo</h1>-->
+<!--    <a href="" class="hero-btn"> CONTACT ME </a>-->
+<!--</section>-->
 
 
-<!----- Footer ------>
+<!--&lt;!&ndash;-&#45;&#45; Footer &#45;&#45;&#45;&#45;&ndash;&gt;-->
 
-<section class="footer">
-    <h4> the last placeholder text</h4>
-    <p> finally its over <br> test</p>
-    <div class="icons">
-        <i class="fa fa-facebook"> </i>
-        <i class="fa fa-twitter"> </i>
-        <i class="fa fa-instagram"> </i>
-        <i class="fa fa-linkedin"> </i>
-    </div>
+<!--<section class="footer">-->
+<!--    <h4> the last placeholder text</h4>-->
+<!--    <p> finally its over <br> test</p>-->
+<!--    <div class="icons">-->
+<!--        <i class="fa fa-facebook"> </i>-->
+<!--        <i class="fa fa-twitter"> </i>-->
+<!--        <i class="fa fa-instagram"> </i>-->
+<!--        <i class="fa fa-linkedin"> </i>-->
+<!--    </div>-->
 
-</section>
+<!--</section>-->
 
 <!----JavaScript for toggle Menu ---->
 <script>
