--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!--Side bar -->
 <section class = "header">
     <nav>
-        <a href = "index.html"><img src="Images/ComputerScience.png"> </a>
+       <!---- <a href = "index.html"><img src="Images/ComputerScience.png"> </a>-->
             <div class = "nav-links" id="navLinks">
                 <i class= "fa-solid fa-circle-xmark" onclick="hideMenu()"> </i>
 
@@ -77,6 +77,7 @@
 
 </body>
 </html>
+
 
 
 
