--- a/More.html
+++ b/More.html
@@ -1,37 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacts</title>
-    <link rel="stylesheet" href="style.css"> <!-- link to your CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"> <!-- icons -->
-</head>
-<body>
-
-<!-- Navigation  -->
-<section class = "header">
-    <nav>
-        <a href = "index.html"><img src="Images/ComputerScience.png"> </a>
-        <div class = "nav-links" id="navLinks">
-            <i class= "fa-solid fa-circle-xmark" onclick="hideMenu()"> </i>
-
-            <ul>
-                <!---- keeping the bottom one so it can be added in the future --->
-                <!----  <li>  <a href = "index.html"> Index </a></li> --->
-                <li> <a href ="About_Me.html"> About Me </a></li>
-                <li> <a href ="Skills.html"> Skills </a></li>
-                <li> <a href ="Projects.html"> Projects </a></li>
-                <li> <a href ="Contacts.html"> Contacts </a></li>
-                <li> <a href ="More.html"> More </a></li>
-            </ul>
-        </div>
-        <i class="fa-solid fa-bars" onclick="showMenu()"></i>
-    </nav>
-</section>
-
-
-    <!----- Contacts ----->
+<!---- will be changed later ---->
+<!----- Contacts ----->
 <section class="campus">
     <h1> Contacts</h1>
 
