--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
                 <i class= "fa-solid fa-circle-xmark" onclick="hideMenu()"> </i>
 
                 <ul>
-                    <li> <a href ="about.html"> About Me </a></li>
-                    <li> <a href ="skills.html"> Skills </a></li>
-                    <li> <a href ="projects.html"> Projects </a></li>
-                    <li> <a href ="contacts.html"> Contacts </a></li>
-                    <li> <a href ="more.html"> More </a></li>
+                    <!---- keeping the bottom one so it can be added in the future --->
+                    <!----  <li>  <a href = "index.html"> Index </a></li> --->
+                    <li> <a href ="About_Me.html"> About Me </a></li>
+                    <li> <a href ="Skills.html"> Skills </a></li>
+                    <li> <a href ="Projects.html"> Projects </a></li>
+                    <li> <a href ="Contacts.html"> Contacts </a></li>
+                    <li> <a href ="More.html"> More </a></li>
                 </ul>
             </div>
         <i class="fa-solid fa-bars" onclick="showMenu()"></i>
