--- a/index.html
+++ b/index.html
@@ -40,28 +40,12 @@
     </div>
 
 </section>
+<!------ campus ---->
 
-<!--&lt;!&ndash;-&#45;&#45; Extra &#45;&#45;&#45;&#45;&ndash;&gt;-->
-
-<!--<section class="cta">-->
-<!--    <h1>placeholder ass text<br> peepeepoopoo</h1>-->
-<!--    <a href="" class="hero-btn"> CONTACT ME </a>-->
-<!--</section>-->
-
-
-<!--&lt;!&ndash;-&#45;&#45; Footer &#45;&#45;&#45;&#45;&ndash;&gt;-->
-
-<!--<section class="footer">-->
-<!--    <h4> the last placeholder text</h4>-->
-<!--    <p> finally its over <br> test</p>-->
-<!--    <div class="icons">-->
-<!--        <i class="fa fa-facebook"> </i>-->
-<!--        <i class="fa fa-twitter"> </i>-->
-<!--        <i class="fa fa-instagram"> </i>-->
-<!--        <i class="fa fa-linkedin"> </i>-->
-<!--    </div>-->
-
-<!--</section>-->
+<section class = "campus">
+    <h1> Placeholder text </h1>
+    <p> test </p>
+</section>
 
 <!----JavaScript for toggle Menu ---->
 <script>
