--- a/index.html
+++ b/index.html
@@ -40,11 +40,10 @@
     </div>
 
 </section>
-<!------ campus ---->
-
-<section class = "campus">
-    <h1> Placeholder text </h1>
-    <p> test </p>
+<!------ footer ---->
+<section class = "footer">
+    <h4> About Us</h4>
+    <p> Placeholder text</p>
 </section>
 
 <!----JavaScript for toggle Menu ---->
